# AgentOrchestra

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Launch error log.txt  README.md  SUMMARY.md  ShadowLoop Plan.txt  TECHNICAL_INTEGRATION_REQUIREMENTS.md  _pending_actions.json  _pending_actions.processed  app_descriptor.json  briefcase.toml  pyproject.toml  test_integration_compatibility.py
.github/workflows/: ci.yml  release.yml
.tmp/pytest-of-konst/pytest-3/test_load_template_accepts_utf0/: bom_template.md
UserTempworkItems/: agent_orchestra_template_builder_instructions.md  conversation_transcript.md
apps/gui/: annotator.py  main.py  presets.py  service_supervisor.py
apps/gui/browser_bridge/: README.md  __init__.py  clipboard_listener.py  clipboard_router.py  dialog.py  handoff.py  url_launcher.py
apps/gui/browser_bridge/tests/: test_clipboard_router.py  test_handoff.py  test_url_launcher.py
apps/gui/canvas/: __init__.py  chat_dialog.py  commands.py  drone_chat_dialog.py  edges.py  inspector.py  layout.py  lineage_box.py  minimap.py  page.py  palette.py  ports.py  scene.py  view.py
apps/gui/canvas/nodes/: __init__.py  agent.py  base.py  control.py  conversation.py  drone_action.py  staging_area.py  template_graph.py
apps/gui/ipc/: client.py  sse_client.py
apps/gui/widgets/: context_gauge.py  diff_view.py  skills_picker.py  workspace_map.py
apps/gui/windows/: agents.py  analytics.py  blueprints.py  chat.py  composer.py  drones.py  first_run.py  history.py  home.py  limits.py  live.py  main_window.py  review.py  settings.py  skills.py  templates.py
apps/service/: main.py  types.py
apps/service/agents/: __init__.py
apps/service/attachments/: __init__.py  render.py
apps/service/cards/: seed.py
apps/service/cost/: meter.py
apps/service/dictation/: whisper.py
apps/service/dispatch/: a2a.py  bus.py  consensus.py  dispatcher.py  drift_sentinel.py  hot_swap.py  nats_bridge.py  speculative.py  tools.py
apps/service/flows/: __init__.py  executor.py  node_types.py
apps/service/ingestion/: hook_installer.py  jsonl_watcher.py
apps/service/ipc/: server.py  sse.py
apps/service/limits/: __init__.py
apps/service/linter/: preflight.py
apps/service/mcp/: client.py  registry.py
apps/service/providers/: anthropic.py  claude_cli.py  codex_cli.py  gemini_cli.py  google.py  ollama.py  protocol.py  registry.py
apps/service/providers/claude_cli/: __init__.py  provider.py  session.py  stream_parser.py
apps/service/sandbox/: docker.py  e2b.py  local.py  protocol.py
apps/service/secrets/: keyring_store.py
apps/service/store/: backup.py  events.py  schema.sql
apps/service/templates/: deployment.py  engine.py
apps/service/tokens/: __init__.py  estimate.py  limits.py
apps/service/tokens/tests/: test_estimate.py
apps/service/updates/: client.py  manifest.py
apps/service/worktrees/: git_cli.py  manager.py  merger.py
docs/: BACKUP.md  BROWSER_PROVIDER_PLAN.md  DRONE_MODEL.md  FLOW_CANVAS_PLAN.md  ROADMAP.md  SHADOWLOOP_ALIGNMENT.md  UI_GAP_ANALYSIS.md  USER_MANUAL.md
docs/dev/: architecture.md  worktree-design.md
packs/archetypes/: broad_research.md  code_edit.md  consensus.md  logic_liaison.md  narrow_research.md  qa_on_fix.md  red_team.md  tracker.md  ui_architect.md  wordflash_article_gen.md
packs/hooks/: agentorchestra-hook.sh
scripts/: README.md  cleanup_duplicates.py  doctor.cmd  launch.cmd  limits.cmd  manifest.json  ops.cmd  ops.py  reset.cmd  restart.cmd  setup.cmd  start.cmd  stop.cmd  test-claude.cmd  test-gemini.cmd  update-restart.cmd  update.cmd
tests/: conftest.py
tests/integration/: test_agentic_dispatch.py  test_plan_act.py  test_worktree_manager.py
tests/unit/: test_agents.py  test_analytics.py  test_attachments_render.py  test_attachments_store.py  test_audit_round_3.py  test_backup.py  test_blueprints_page.py  test_canvas_layout.py  test_canvas_selection.py  test_cards_seed.py  test_claude_cli_provider.py  test_claude_cli_stream_parser.py  test_codex_cli_provider.py  test_coding_sessions.py  test_consensus.py  test_cost.py  test_dispatcher.py  test_drift_sentinel.py  test_drone_rpcs.py  test_drone_store.py  test_drones_page.py  test_event_bus.py  test_event_store.py  test_flow_executor.py  test_flow_store.py  test_gemini_cli_provider.py  test_hook_installer.py  test_hot_swap.py  test_limits_consistency.py  test_linter.py  test_mcp_registry.py  test_merger.py  test_merger_install.py  test_naming.py  test_presets.py  test_providers.py  test_replay.py  test_repo_agents.py  test_sandbox.py  test_shadow_plan_guard.py  (+7 more)
