[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentorchestra"
version = "0.1.2"
description = "Desktop orchestrator for multi-vendor AI sub-agents with branch-per-agent isolation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AgentOrchestra Contributors" }]

dependencies = [
    # Core
    "pydantic>=2.7",
    "anyio>=4.4",
    # Templates
    "jinja2>=3.1",
    # Storage
    "aiosqlite>=0.20",
    # Watcher
    "watchdog>=4.0",
    # HTTP / IPC
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    # Secrets
    "keyring>=25.0",
    # Providers (optional at install but listed for development)
    "anthropic>=0.30",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
    "qasync>=0.27",
]
annotator = [
    # In-app annotation overlay (floating bar + Review dialog).  Not on
    # PyPI yet — install separately from the source you have locally
    # (wheel, git URL, or `pip install -e <path>`).  The GUI runs fine
    # without it; `apps/gui/annotator.py` no-ops when the import fails.
    # Pinned per TECHNICAL_INTEGRATION_REQUIREMENTS.md — bump
    # deliberately and re-run test_integration_compatibility.py on
    # each upgrade.
    "pyside6_annotator>=1.4.23",
]
google = [
    "google-genai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
agentorchestra-service = "apps.service.main:main"
agentorchestra-gui = "apps.gui.main:main"

[tool.hatch.build.targets.wheel]
# `packs/` is data, not Python — its subdirs (hooks/, archetypes/) hold
# .sh and .md files that the service reads via Path(__file__) at
# runtime.  We force-include them in the wheel but don't list them as
# Python packages.
packages = ["apps"]
force-include = { "packs" = "packs" }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    # Verbatim contract test from the pyside6_annotator project — kept
    # at the repo root for manual `pytest test_integration_compatibility.py`
    # runs after bumping the annotator pin (per its docs).  Not on the
    # CI critical path; we don't reformat upstream files.
    "test_integration_compatibility.py",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",   # line length enforced by formatter
    "RUF006", # asyncio.ensure_future fire-and-forget is intentional in GUI signal handlers
    "RUF012", # mutable default in BaseModel/dataclass — pydantic + dataclasses handle this
    "RUF001", # ambiguous unicode (em/en dashes) — used in user-facing copy intentionally
    "SIM105", # contextlib.suppress is verbose for one-line try/except in hot paths
    "SIM117", # nested with statements — readability is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017"]  # blind pytest.raises(Exception) is fine in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["watchdog.*", "keyring.*", "qasync.*", "ulid.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (may touch the filesystem and spawn subprocesses)",
    "e2e: end-to-end GUI tests",
]

[tool.coverage.run]
source = ["apps", "packs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
